--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <h1>Hello World!</h1>
 
 <div>
@@ -7,5 +8,5 @@
 <div>
     <p>Deneme 1</p>
 </div>
-
-<-- CommentS ! -->
+</html>
+<!-- CommentS  -->
